# GRADER-SANITIZED

./: .gitignore  LICENSE  README.md  REPORT.md  pyproject.toml
evals/private/: _build_contextual_heldout.py  adversarial_250.jsonl  adversarial_50.jsonl  case_001.md  contextual_heldout_100.jsonl  contextual_heldout_100.sha256  contextual_llm_probe_100.jsonl  generated_200.jsonl  holdout_250.jsonl  independent_150.jsonl  no_fixture_probe_100.jsonl  redteam_250.jsonl  synthetic_smoke.jsonl  synthetic_train_1000.jsonl
grader/: __init__.py  artifact_store.py  audit.py  cli.py  commands.py  console.py  corpus.py  detect.py  eval_runner.py  generalize.py  llm_client.py  llm_pass.py  mcp_stub.py  models.py  policy.py  pseudonymize.py  reveal_store.py  transform.py  usefulness.py  util.py  verify.py
policies/: blind_model_eval.json  client_strategy.json  code_review_blind.json  hard_egress.json
scripts/: run_grader_experiment.sh  run_granite_comparisons.sh  run_granite_probe.sh  run_heldout_regrade.sh  run_independent_grade.sh  start_ollama_local.sh  summarize.py
tests/: test_eval_runner.py  test_grader.py  test_llm_pass.py  test_policy.py  test_reveal_store.py  test_transform.py  test_usefulness.py  test_verify.py
training/: COLAB.md  build_sft.py  eval_adapter.py  train_lora.py
training/expansion/: heldout_crossgen.jsonl  manifest.json  train_new.jsonl
