[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grader"
version = "0.1.0"
description = "Local deterministic blinding compiler kernel for Acme."
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Acme"}]

[tool.setuptools.packages.find]
include = ["grader*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
